# mosaic-agent

./: .env.example  .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml
.faiss_cache/NVDA/: index.faiss  index.pkl
.github/workflows/: ci.yml
agents/: backtest_agent.py  orchestrator.py  research_agent.py  signal_agent.py
config/: settings.py
evals/: backtest_sanity.py  rag_faithfulness.py  retrieval_eval.py  run_evals.py  signal_quality.py
graph/: builder.py  edges.py  state.py
rag/: embeddings.py  ingest.py  retriever.py
schemas/: backtest_result.py  signal.py
storage/: signals.py
tests/: test_graph_routing.py  test_rag_retrieval.py  test_signal_schema.py
tools/: calculator_tool.py  edgar_tool.py  market_data_tool.py
