[project]
name = "mosaic-agent"
version = "0.1.0"
description = "AlphaSignal Research Agent — multi-agent LangGraph system for SEC filing analysis and alpha signal extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.6",
    "langsmith>=0.7.25",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "vectorbt>=0.28.5",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# LangSmith evaluator protocol requires Any for run/example params
"evals/**" = ["ANN401"]
# Test fixtures use Any for factory return types
"tests/**" = ["ANN401"]
# Golden dataset contains realistic example strings that exceed 88 chars by design
"evals/signal_quality.py" = ["ANN401", "E501"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["schemas", "graph", "agents", "rag", "evals", "tools", "config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
